# BDDT

./: KURSACH.sln  README.md
KURSACH/: CMakeLists.txt  KURSACH.vcxproj  KURSACH.vcxproj.filters  Main.cpp  output.txt  railway_system.cpp  sorting_node.cpp  wagon.cpp  wagontype.h
